# SimpleFiniteField

./: .gitignore  CMakeLists.txt  README.md
include/: FiniteField.hpp
main/: finite_field_example.cpp
src/: FiniteField.cpp  FiniteField_Constructors.cpp  FiniteField_Operators.cpp  FiniteField_Utilities.cpp  finite_field_example.cpp
test/: test_finite_field.cpp  test_finite_field_integer.cpp
